devel
-----

* Fix for issue #772: Optimized document counting for ArangoSearch views.
  Added new ArangoSearch view option 'countApproximate' for customizing 
  view count strategy.

* Fix AR-113. Add a check in the AQL geo-index-optimizer rule that vars
  referenced by a candidate index expression are actually available at the
  candidate index node.

* Views on SmartGraph Edge collections do not contain some documents
  twice.

* Fixed agency redirect in poll api.

* Fixed issue #12248: Web UI - Added missing HTML escaping in the setup script
  section of a foxx app.

* The scheduler will now run a minimum of 4 threads at all times, and the
  default and minimal value for `--server.maximal-threads` has been lowered from
  64 to the greater of 32 and twice the number of detected cores.

* Throttle work coming from low priority queue, according to a constant
  and to an estimate taking into account fanout for multi-shard operations.

* Move to 4 priority levels "low", "medium", "high" and "maintenance" in
  scheduler to ensure that maintenance work and diagnostics is always
  possible, even in the case of RocksDB throttles. Do not allow any
  RocksDB work on "maintenance".

* Commit replications on high priority queue.

* Essentially get rid of timeout in replication to drop followers. This
  is now entirely handled via reboot and failure tracking. The timeout
  has now a default minimum of 15 minutes but can still be configured via
  options.

* Additional metrics for all queue lengths and low prio ongoing work.

* New metric for number and total time of replication operations.

* New metrics for number of internal requests in flight, internal request
  duration, and internal request timeouts

* Fix `Gauge` assignment operators.

* Fixed and extended LDAP log messages.

* Added LDAP_OFF if referrals and restart are false.

* If LDAP search fails, also retry (update to given number of retries).
