@@ -28,7 +28,7 @@
 #include "Cluster/AgencyCallbackRegistry.h"
 #include "Cluster/ClusterFeature.h"
 #include "Futures/Promise.h"
-#include "GeneralServer/RestHandler.h"
+#include "RestServer/Metrics.h"
 
 #include <map>
 #include <shared_mutex>
@@ -36,9 +36,7 @@
 namespace arangodb {
 
 class AgencyCache final : public arangodb::Thread {
-
-public:
-
+ public:
   typedef std::unordered_map<std::string, consensus::query_t> databases_t;
 
   struct change_set_t {
@@ -58,8 +56,7 @@ public:
     application_features::ApplicationServer& server,
     AgencyCallbackRegistry& callbackRegistry);
 
-  /// @brief Clean up
-  virtual ~AgencyCache();
+  ~AgencyCache();
 
   // whether or not the thread is allowed to start during prepare
   bool isSystem() const override;
@@ -126,7 +123,7 @@ public:
   change_set_t changedSince(
     std::string const& section, consensus::index_t const& last) const;
 
-private:
+ private:
 
   /// @brief invoke all callbacks
   void invokeAllCallbacks() const;
@@ -179,7 +176,9 @@ private:
 
   /// @brief snapshot note for client
   consensus::index_t _lastSnapshot;
-
+  
+  /// @brief current number of entries in _callbacks
+  Gauge<uint64_t>& _callbacksCount;
 };
 
 } // namespace
