@@ -48,17 +48,20 @@ AgencyCallbackRegistry::AgencyCallbackRegistry(application_features::Application
     _callbackBasePath(callbackBasePath),
     _totalCallbacksRegistered(
         server.getFeature<arangodb::MetricsFeature>().counter(
-          "arangodb_agency_callback_registered", 0, "Total number of agency callbacks registered")) {}
+          "arangodb_agency_callback_registered", 0, "Total number of agency callbacks registered")),
+    _callbacksCount(
+        server.getFeature<arangodb::MetricsFeature>().gauge(
+          "arangodb_agency_callback_count", uint64_t(0), "Current number of agency callbacks registered")) {}
 
 AgencyCallbackRegistry::~AgencyCallbackRegistry() = default;
 
 bool AgencyCallbackRegistry::registerCallback(std::shared_ptr<AgencyCallback> cb, bool local) {
-  uint64_t rand;
+  uint64_t id;
   while (true) {
-    rand = RandomGenerator::interval(std::numeric_limits<uint64_t>::max());
+    id = RandomGenerator::interval(std::numeric_limits<uint64_t>::max());
 
     WRITE_LOCKER(locker, _lock);
-    if (_endpoints.try_emplace(rand, cb).second) {
+    if (_callbacks.try_emplace(id, cb).second) {
       break;
     }
   }
@@ -67,12 +70,13 @@ bool AgencyCallbackRegistry::registerCallback(std::shared_ptr<AgencyCallback> cb
     bool ok = false;
     if (local) {
       auto& cache = _agency.server().getFeature<ClusterFeature>().agencyCache();
-      ok = cache.registerCallback(cb->key, rand);
+      ok = cache.registerCallback(cb->key, id);
     } else {
-      ok = _agency.registerCallback(cb->key, getEndpointUrl(rand)).successful();
+      ok = _agency.registerCallback(cb->key, getEndpointUrl(id)).successful();
       cb->local(false);
     }
     if (ok) {
+      _callbacksCount += 1;
       ++_totalCallbacksRegistered;
       return true;
     }
@@ -85,15 +89,15 @@ bool AgencyCallbackRegistry::registerCallback(std::shared_ptr<AgencyCallback> cb
   }
     
   WRITE_LOCKER(locker, _lock);
-  _endpoints.erase(rand);
+  _callbacks.erase(id);
   return false;
 }
 
 std::shared_ptr<AgencyCallback> AgencyCallbackRegistry::getCallback(uint64_t id) {
   READ_LOCKER(locker, _lock);
-  auto it = _endpoints.find(id);
+  auto it = _callbacks.find(id);
 
-  if (it == _endpoints.end()) {
+  if (it == _callbacks.end()) {
     return nullptr;
   }
   return (*it).second;
@@ -101,14 +105,14 @@ std::shared_ptr<AgencyCallback> AgencyCallbackRegistry::getCallback(uint64_t id)
 
 bool AgencyCallbackRegistry::unregisterCallback(std::shared_ptr<AgencyCallback> cb) {
   bool found = false;
-  uint64_t endpointToDelete = 0;
+  uint64_t id = 0;
   {
     // find the key of the callback while only holding a read lock
     READ_LOCKER(locker, _lock);
 
-    for (auto const& it : _endpoints) {
+    for (auto const& it : _callbacks) {
       if (it.second.get() == cb.get()) {
-        endpointToDelete = it.first;
+        id = it.first;
         found = true;
         break;
       }
@@ -120,7 +124,7 @@ bool AgencyCallbackRegistry::unregisterCallback(std::shared_ptr<AgencyCallback> 
   if (found) {
     {
       WRITE_LOCKER(locker, _lock);
-      if (_endpoints.erase(endpointToDelete) == 0) {
+      if (_callbacks.erase(id) == 0) {
         // callback not in map anymore. this can only happen if this method
         // is called concurrently for the same callback and one thread has
         // already deleted it from the map. in this case we act like as if
@@ -136,19 +140,20 @@ bool AgencyCallbackRegistry::unregisterCallback(std::shared_ptr<AgencyCallback> 
     if (found) {
       if (cb->local()) {
         auto& cache = _agency.server().getFeature<ClusterFeature>().agencyCache();
-        cache.unregisterCallback(cb->key, endpointToDelete);
+        cache.unregisterCallback(cb->key, id);
       } else {
-        _agency.unregisterCallback(cb->key, getEndpointUrl(endpointToDelete));
+        _agency.unregisterCallback(cb->key, getEndpointUrl(id));
       }
+      _callbacksCount -= 1;
     }
   }
   return found;
 }
 
-std::string AgencyCallbackRegistry::getEndpointUrl(uint64_t endpoint) const {
+std::string AgencyCallbackRegistry::getEndpointUrl(uint64_t id) const {
   std::stringstream url;
   url << Endpoint::uriForm(ServerState::instance()->getEndpoint())
-      << _callbackBasePath << "/" << endpoint;
+      << _callbackBasePath << "/" << id;
 
   return url.str();
 }
