@@ -87,7 +87,7 @@ void MetricsFeature::toPrometheus(std::string& result) const {
 
   // StatisticsFeature
   auto& sf = server().getFeature<StatisticsFeature>();
-  sf.toPrometheus(result, std::chrono::duration<double,std::milli>(
+  sf.toPrometheus(result, std::chrono::duration<double, std::milli>(
                     std::chrono::system_clock::now().time_since_epoch()).count());
 
   // RocksDBEngine
